--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ant-design-vue": "^1.1.7",
     "element-ui": "^2.0.8",
     "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
